1999-07-08  Tom Tromey  <tromey@cygnus.com>

	* mauve-libgcj: Omit InetAddressTest.  Don't mention
	MyURLConnection.

1999-07-07  Tom Tromey  <tromey@cygnus.com>

	* mauve-libgcj: Omit SocketTest and URLConnectionTest.

	* mauve-libgcj: Turn off many tests which are known to fail.

1999-07-07  Andrew Haley  <aph@cygnus.com>

        * include/i386-signal.h (MAKE_THROW_FRAME): Advance EIP by two
	bytes to make it point after the instruction where the trap
	occurred.
	(HANDLE_DIVIDE_OVERFLOW): Ditto.

1999-07-07  Tom Tromey  <tromey@cygnus.com>

	* mauve-libgcj: Explicitly enable formerly disabled java.text
	tests.

	* mauve-libgcj: Turn off ClassTest test.  Enable java.text tests
	again.

1999-07-01  Andrew Haley  <aph@cygnus.com>

        * include/i386-signal.h: Replace sigaction () with __sigaction ().
        This is a workaround for a bug in glibc's pthreads package which
        doesn't deliver any sigcontext information to a signal handler.

1999-06-24  Tom Tromey  <tromey@cygnus.com>

	* java/lang/e_asin.c: Don't use __int32_t or __uint32_t.
	* java/lang/fdlibm.h (HUGE): Conditionally define.

Fri May 28 22:20:03 1999  Anthony Green  <green@cygnus.com>

	* java/lang/fdlibm.h: Don't use __uint32_t.  Include mprec.h.
	* java/lang/e_log.c: Don't use __uint32_t.

1999-05-27  Eric Christopher <echristo@cygnus.com>

	* configure: Rebuilt
	* configure.in: Fixed ISO C9X and namespace collision with __uint32_t
	* acconfig.h: Rebuilt
	* include/config.h.in: Rebuilt

	* java/lang/mprec.h, java/lang/e_acos.c, java/lang/e_asin.c,
 	java/lang/e_atan2.c, java/lang/e_exp.c, java/lang/e_fmod.c,
 	e_log.c, java/lang/e_pow.c, java/lang/e_rem_pio2.c,
 	java/lang/e_remainder.c, java/lang/e_sqrt.c, java/lang/fdlibm.h,
 	k_tan.c, java/lang/mprec.h, java/lang/s_atan.c,
 	java/lang/s_ceil.c, java/lang/s_copysign.c, java/lang/s_fabs.c,
 	s_floor.c, java/lang/s_rint.c, java/lang/sf_rint.c: Fixed ISO C9X
 	and namespace collision with __uint32_t
